# UPLC-CAPE

./: .editorconfig  .envrc  .envrc.local.example  .gitignore  .log4brains.yml  .prettierignore  .prettierrc  .wtp.yml  BANNER.md  CONTRIBUTING.md  PLUTUS_1_52_UPGRADE_STATUS.md  PLUTUS_DEPENDENCY_UPGRADE_GUIDE.md  README.md  SECURITY.md  USAGE.md  cabal.project  cabal.project.preview  cape.cabal  flake.nix  fourmolu.yaml  index.html  treefmt.toml
.githooks/: pre-commit
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci-validate.yml  cleanup-preview.yml  deploy-slides.yml  pr-ci.yml  pr-preview.yml  static.yml
adr/: 404.html  index.html
adr/404/: index.html
benchmarks/: ecd.html  ecd.json  factorial.html  factorial.json  factorial_naive_recursion.html  factorial_naive_recursion.json  fibonacci.html  fibonacci.json  fibonacci_naive_recursion.html  fibonacci_naive_recursion.json  htlc.html  htlc.json  linear_vesting.html  linear_vesting.json  two-party-escrow.html  two_party_escrow.html  two_party_escrow.json
benchmarks/ecd/: Plinth_1.45.0.0_Unisay.html  Plinth_1.64.0.0_Unisay.html  Plinth_1.65.0.0_Unisay.html
benchmarks/factorial/: Plutarch_1.11.0_SeungheonOh_exbudget.html  Plutarch_1.11.0_SeungheonOh_size.html  Scalus_0.12.1_Unisay.html  Scalus_0.16.0_Unisay.html  Scalus_0.17.0_Unisay.html
benchmarks/factorial_naive_recursion/: OpShin_1.0.0_nielstron.html  Pebble_0.1.2_michele-nuzzi.html  Plinth_1.45.0.0_Unisay.html  Plinth_1.64.0.0_Unisay.html  Plinth_1.65.0.0_Unisay.html  Plutarch_1.11.0_SeungheonOh.html  Scalus_0.12.1_Unisay.html  Scalus_0.16.0_Unisay.html  Scalus_0.17.0_Unisay.html  Scalus_0.18.2_Unisay.html
benchmarks/fibonacci/: Aiken_1.1.19_KtorZ_prepacked.html  Aiken_1.1.19_KtorZ_tailrec.html  OpShin_1.0.0_nielstron.html  Plinth_1.45.0.0_Unisay.html  Plinth_1.64.0.0_Unisay.html  Plinth_1.65.0.0_Unisay.html  Plutarch_1.11.0_SeungheonOh_exbudget.html  Plutarch_1.11.0_SeungheonOh_prepacked.html  Plutarch_1.11.0_SeungheonOh_size.html  Scalus_0.12.1_Unisay.html  Scalus_0.12.1_nau_prepacked.html  Scalus_0.16.0_Unisay.html  Scalus_0.16.0_Unisay_prepacked.html  Scalus_0.17.0_Unisay.html  Scalus_0.18.2_Unisay.html
benchmarks/fibonacci_naive_recursion/: Aiken_1.1.17_KtorZ.html  Pebble_0.1.2_michele-nuzzi.html  Plinth_1.45.0.0_Unisay.html  Plinth_1.64.0.0_Unisay.html  Plinth_1.65.0.0_Unisay.html  Plutarch_1.11.0_SeungheonOh.html  Scalus_0.12.1_Unisay.html  Scalus_0.16.0_Unisay.html  Scalus_0.17.0_Unisay.html  Scalus_0.18.2_Unisay.html
benchmarks/htlc/: Plinth_1.45.0.0_Unisay.html  Plinth_1.45.0.0_Unisay_asdata.html  Plinth_1.64.0.0_Unisay.html  Plinth_1.64.0.0_Unisay_asdata.html  Plinth_1.65.0.0_Unisay.html  Plinth_1.65.0.0_Unisay_asdata.html  Scalus_0.16.0_Unisay.html  Scalus_0.17.0_Unisay.html  Scalus_0.18.2_Unisay.html
benchmarks/linear_vesting/: Plinth_1.45.0.0_Unisay.html  Plinth_1.45.0.0_Unisay_plain.html  Plinth_1.64.0.0_Unisay.html  Plinth_1.64.0.0_Unisay_plain.html  Plinth_1.65.0.0_Unisay.html  Plinth_1.65.0.0_Unisay_plain.html  Scalus_0.18.2_Unisay.html
benchmarks/two_party_escrow/: Plinth_1.45.0.0_Unisay.html  Plinth_1.45.0.0_Unisay_plain.html  Plinth_1.64.0.0_Unisay.html  Plinth_1.64.0.0_Unisay_plain.html  Plinth_1.65.0.0_Unisay.html  (+2 more)
doc/: cape-tests-troubleshooting.md  domain-model.md  haskell-code-style.md  metrics.md  relude-guidance.md  slides.md  submission-guide.md  usage.md
doc/adr/: index.md  (+16 more)
evolution/: index.html
lib/: Ecd.hs  Factorial.hs  Fibonacci.hs  HTLC.hs  LinearVesting.hs  TwoPartyEscrow.hs
measure/: cabal.project  measure.cabal  uplc-measure.cabal
measure-app/: Main.hs
measure/app/: GenerateVerifiers.hs  Main.hs
measure/app/App/: BuiltinDataParser.hs  Cli.hs  Compile.hs  Error.hs  Fixture.hs  PrettyResult.hs  ScriptContextBuilder.hs  Tests.hs  Verify.hs
measure/lib/Cape/: Compile.hs  PrettyResult.hs  Tests.hs
measure/test-examples/: always-succeed.uplc  script-context-demo.json
measure/test/App/: BuiltinDataParserSpec.hs  ScriptContextBuilderSpec.hs
measure/test/Cape/: ScriptContextBuilderSpec.hs  TestsSpec.hs
nix/: plinth-module.nix
plinth/: LICENSE  cabal.project  fourmolu.yaml  metrics.json  uplc-cape-benchmarks.cabal
plinth-submissions-app/: Main.hs
plinth-submissions-preview-app/: Main.hs
plinth/app/: FactorialMain.hs  Main.hs
plinth/src/: TwoPartyEscrow.hs
plinth/test/: TwoPartyEscrowSpec.hs
plinth/test/Cape/: ScriptContextBuilder.hs
pr-103/: index.html
pr-113/: index.html
pr-116/: index.html
pr-117/: index.html
pr-120/: index.html
pr-135/: index.html
pr-136/: index.html
pr-143/: index.html
pr-144/: index.html
pr-146/: index.html
pr-150/: index.html
pr-152/: index.html
pr-157/: index.html
pr-162/: index.html
pr-163/: index.html
pr-167/: index.html
pr-170/: index.html
pr-173/: index.html
pr-174/: index.html
pr-175/: index.html
pr-176/: index.html
pr-178/: index.html
pr-181/: index.html
pr-182/: index.html
pr-186/: index.html
pr-197/: index.html
pr-199/: index.html
pr-203/: index.html
pr-205/: index.html
pr-206/: index.html
pr-207/: index.html
pr-209/: index.html
pr-210/: index.html
pr-215/: index.html
pr-216/: index.html
pr-220/: index.html
pr-221/: index.html
pr-223/: index.html
pr-224/: index.html
pr-226/: index.html
pr-230/: index.html
pr-232/: index.html
pr-233/: index.html
pr-234/: index.html
pr-236/: index.html
pr-237/: index.html
pr-238/: index.html
pr-239/: index.html
pr-241/: index.html
pretty-uplc-app/: Main.hs
preview/: index.html
report/: index.html
scenarios/: factorial.md  fibonacci-behavioral-scenarios.md  fibonacci-implementation-logic.md  fibonacci-state-machine.md  fibonacci-state-machine.mmd  fibonacci.md
schemas/: cape-tests.schema.json
scripts/: cape.sh  pretty-uplc.sh
slides/: 404.html  _redirects  index.html
templates/: benchmark-README-template.md  metrics-template.json
test/: EcdSpec.hs  FactorialSpec.hs  FibonacciSpec.hs  HTLCSpec.hs  LinearVestingSpec.hs  TwoPartyEscrowSpec.hs  ValidatorHelpers.hs  test-scripts.sh
(+2190 files in other folders)
