cabal-version: 3.4
name:          measure
version:       1.0.0
synopsis:      UPLC measurement tool for CAPE framework
description:
  A tool for measuring UPLC program performance metrics including
  CPU units, memory units, script size, and term size for the
  UPLC-CAPE framework.

author:        UPLC-CAPE Project
maintainer:    UPLC-CAPE Project
category:      Blockchain
license:       Apache-2.0

common common-deps
  build-depends:
    , aeson
    , aeson-pretty
    , base               >=4.16
    , bytestring
    , flat
    , plutus-core        >=1.52
    , plutus-ledger-api  >=1.52
    , plutus-tx          >=1.52
    , plutus-tx-plugin   >=1.52
    , relude             ^>=1.2.2
    , serialise
    , some
    , text
    , time

common common-language
  import:             common-deps
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wpartial-fields

  default-language:   Haskell2010
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    UndecidableInstances
    ViewPatterns

-- Core measurement library
library
  import:          common-language
  exposed-modules:
    Cape.Compile
    Cape.Error
    Cape.Fixture
    Cape.PrettyResult
    Cape.ScriptContextBuilder
    Cape.Tests
    Cape.Verify
    PlutusCore.Data.Compact.Parser
    PlutusCore.Data.Compact.Printer

  build-depends:
    , aeson
    , aeson-pretty
    , bytestring
    , containers
    , directory
    , filepath
    , flat
    , megaparsec
    , mtl
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , process
    , relude
    , serialise
    , some
    , text
    , time

  hs-source-dirs:  lib

-- UPLC measurement tool
executable measure
  import:         common-language
  main-is:        Main.hs
  other-modules:  Cape.Cli
  build-depends:
    , ansi-terminal
    , measure
    , optparse-applicative

  hs-source-dirs: app

-- Test suite
test-suite measure-tests
  import:             common-language
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Cape.ScriptContextBuilderSpec
    Cape.TestsSpec
    PlutusCore.Data.Compact.ParserSpec
    PlutusCore.Data.Compact.PrinterSpec

  build-depends:
    , aeson
    , containers
    , hspec
    , measure
    , vector

  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
